# UR5_robotics

./: .gitignore  Doxyfile  README.md
documentation/doxygen/html/: annotated.html  classdetect__area_1_1DetectArea-members.html  classdetect__area_1_1DetectArea.html  classdetect__blocks_1_1Block-members.html  classdetect__blocks_1_1Block.html  classdetect__blocks_1_1DetectBlocks-members.html  classdetect__blocks_1_1DetectBlocks.html  classes.html  dataset2Yolo_8py.html  detect__area_8py.html  detect__blocks_8py.html  dir_000005_000001.html  dir_094696d64bf9042e34c4ff3938c71239.html  dir_30cff31bd17f9559579457048c142ea5.html  dir_41eeb86fe8d73d0bf5f2ed25837b4945.html  dir_546bbd2fefe53b1237848e276089430c.html  dir_81a55fc6ebb4342453751ec82c7eaef3.html  dir_81a55fc6ebb4342453751ec82c7eaef3_dep.dot  dir_85630d89b8503eae1037c5f321dd3dd1.html  dir_85630d89b8503eae1037c5f321dd3dd1_dep.dot  dir_b8640947b3b06c15c2eff82231ae1194.html  dir_b8640947b3b06c15c2eff82231ae1194_dep.dot  dir_c39e0e0e2a4c282890cc82ddbca5a153.html  dir_cbdb8362360e11eafe2fa3bc74cf0ffd.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  index.html  (+43 more)
planner_pkg/: CMakeLists.txt  package.xml
planner_pkg/include/planner_pkg/: kinematics.h  movement.h  planner.h
planner_pkg/src/: kinematics.cpp  movement.cpp  planner.cpp
spawnLego/: spawnLego.py
utils/: scale_legos.py
utils/dataset_creation/: categories.json  dataset2Yolo.py  yolo-k-fold-splitter.py
utils/training/: training.py
vision/: .gitignore  detect_area.py  detect_blocks.py  detect_legos.py  params.py  vision.py
(+156 files in other folders)
